--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
+
 <html>
+
 <head>
+
   <meta charset="utf-8">
   <title>Jasmine Spec Runner v2.3.4</title>
 
@@ -12,10 +15,12 @@
   <script src="lib/jasmine-2.3.4/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/calculator.js"></script>
+  <script src="lib/angular.min.js"></script>
+  <script src="lib/angular/angular-mocks.js"></script>
+  <script src="src/service.js"></script>
 
   <!-- include spec files here... -->
-  <script src="spec/calculator.spec.js"></script>
+  <script src="spec/omdb/service.spec.js"></script>
 
 </head>
 
