--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -15,12 +15,17 @@
   <script src="lib/jasmine-2.3.4/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="lib/angular.min.js"></script>
+  <script src="lib/angular/angular.min.js"></script>
+  <script src="lib/angular/angular-resource.min.js">a</script>
+  
   <script src="lib/angular/angular-mocks.js"></script>
-  <script src="src/service.js"></script>
+  <script src="src/omdb/service.js"></script>
+  <script src="src/movie-core/service.js"></script
+
 
   <!-- include spec files here... -->
   <script src="spec/omdb/service.spec.js"></script>
+  <script src="spec/movie-core/service.spec.js"></script>
 
 </head>
 
