fix display of search results

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
           <form class="form-inline-lg" action="" ng-submit="search()">
             <div class="input-group">
               <input class="form-control" type="text" placeholder="Film title..." ng-model="query">
-              <span class="input-group-btn"><button class="btn btn-default" type="button" ng-click="">Go!</button></span>
+              <span class="input-group-btn"><button class="btn btn-default" type="button" ng-click="search()">Go!</button></span>
             </div>
           </form>
         </div>
