--- a/src/index.html
+++ b/src/index.html
@@ -13,13 +13,13 @@
     <div class="header">
       <div class="container">
         <div class="page-header">
-          <h1><a href="#/">MovieApp</a></h1>
+          <h1><a href="#/">Jerry's Movie Magic</a></h1>
           <p class="lead">Your Resource for Movie Data</p>
         </div>
         <div ng-controller="SearchController">
           <form class="form-inline-lg" action="" ng-submit="search()">
             <div class="input-group">
-              <input class="form-control" type="text" placeholder="Film title..." ng-model="query">
+              <input class="form-control" type="text" placeholder="Film title..." ng-model="data.query" ng-keyup="keyup()" ng-keydown="keydown()" />
               <span class="input-group-btn"><button class="btn btn-default" type="button" ng-click="search()">Go!</button></span>
             </div>
           </form>
