$interval service working, html content test failing??

--- a/src/index.html
+++ b/src/index.html
@@ -38,11 +38,15 @@
     </div>
     <script type="text/javascript" src="https://code.angularjs.org/1.4.4/angular.min.js"></script>
     <script type="text/javascript" src="https://code.angularjs.org/1.4.4/angular-route.min.js"></script>
+    <script type="text/javascript" src="https://code.angularjs.org/1.4.4/angular-resource.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.0.2/ui-bootstrap-tpls.min.js"></script>
 
-    <script type="text/javascript" src="movie-app/app.js" charset="utf-8"></script>
-    <script type="text/javascript" src="omdb/service.js" charset="utf-8"></script>
-    <script type="text/javascript" src="movie-app/search.controller.js" charset="utf-8"></script>
-    <script type="text/javascript" src="movie-app/results.controller.js" charset="utf-8"></script>
+    <script type="text/javascript" src="movie-app/app.js"></script>
+    <script type="text/javascript" src="omdb/service.js"></script>
+    <script type="text/javascript" src="movie-core/service.js"></script>
+    <script type="text/javascript" src="movie-app/search.controller.js"></script>
+    <script type="text/javascript" src="movie-app/results.controller.js"></script>
+    <script type="text/javascript" src="movie-app/home.controller.js"></script>
+    <script type="text/javascript" src="movie-app/movie-result.directive.js"></script>
   </body>
 </html>
