--- a/src/movie-app/results.html
+++ b/src/movie-app/results.html
@@ -1,15 +1,19 @@
+
 <div>
   <br>
   <ol class="breadcrumb">
     <li><a ng-href="#/">Home</a></li>
     <li>Results</li>
   </ol>
-  <uib-accordian>
-    <div uib-accordian-group ng-repeat="result in results" is-open="result.open" ng-click="expand($index, result.imdbID)">
-      <accordian-heading>
-        {{result.Title}}<i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': result.open, 'glyphicon-chevron-right': !result.open}"></i>
-      </accordian-heading>
+
+  <accordion>
+    <accordion-group ng-repeat="result in results" is-open="result.open"
+      ng-click="expand($index, result.imdbID)">
+      <accordion-heading>
+        {{result.Title}} <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': result.open, 'glyphicon-chevron-right': !result.open}"></i>
+      </accordion-heading>
       <movie-result result="result.data"></movie-result>
-    </div>
-  </uib-accordian>
+    </accordion-group>
+  </accordion>
+
 </div>
